--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   branch: master
 
 media_folder: src/images/content
-public_folder: /images
+public_folder: /images/content
 
 collections:
 
