--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@glidejs/glide": "^3.2.4",
+		"chroma-js": "^2.0.2",
+		"fullpage.js": "^3.0.4",
 		"greensock": "^1.20.2",
+		"granim": "^2.0.0",
+		"intersection-observer": "^0.5.1",
 		"jquery": "^3.2.1",
 		"jquery-ui": "^1.12.1",
 		"jquery-ui-bundle": "^1.12.1",
 		"lodash": "^4.17.4",
-		"material-design-icons": "^3.0.1",
-		"verge": "^1.10.2"
+		"scrollama": "^1.4.4",
+		"verge": "^1.10.2",
+		"videojs": "^1.0.0",
+		"videojs-offset": "^2.0.0-beta.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.2.2",
