--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"extract-loader": "^3.1.0",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"file-loader": "^3.0.1",
+		"handlebars": "^4.0.12",
+		"handlebars-loader": "^1.7.1",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
 		"jshint": "^2.9.6",
