--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"repository": "n/a",
 	"scripts": {
 		"dev": "webpack-dev-server --config webpack.config.js --mode development",
-		"build": "webpack --config webpack.config.js --mode production"
+		"siteBuild": "webpack --config webpack.config.js --mode production"
 	},
 	"author": "",
 	"license": "ISC",
