--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"handlebars-loader": "^1.7.1",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
+		"image-webpack-loader": "^4.6.0",
 		"jshint": "^2.9.6",
 		"node-sass": "^4.11.0",
 		"path": "^0.12.7",
