--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -68,8 +68,8 @@ collections:
                 name: art-project--title 
                 widget: string
              
-              - label: art project image 
-                name: art-project--image 
+              - label: art project thumbnail image 
+                name: art-project--thumbnail-image 
                 widget: image
                 pattern: 
                   - '^[0-9a-zA-Z_\-.]+(\.(jpg|png|gif))$' 
