Added swup for transitions between index and project page. Using single temp project page for testing

--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
 		"@glidejs/glide": "^3.2.4",
 		"chroma-js": "^2.0.2",
 		"fullpage.js": "^3.0.4",
-		"greensock": "^1.20.2",
 		"granim": "^2.0.0",
+		"greensock": "^1.20.2",
 		"intersection-observer": "^0.5.1",
 		"jquery": "^3.2.1",
 		"jquery-ui": "^1.12.1",
 		"jquery-ui-bundle": "^1.12.1",
 		"lodash": "^4.17.4",
 		"scrollama": "^1.4.4",
+		"swup": "^1.9.0",
 		"verge": "^1.10.2",
 		"videojs": "^1.0.0",
 		"videojs-offset": "^2.0.0-beta.2"
