--- a/content/art-projects.json
+++ b/content/art-projects.json
@@ -2,37 +2,37 @@
   "art-projects__list": [
     {
       "art-project--title": "Discrepancies",
-      "art-project--description": "project description here project description here project description here project description here project description here ",
-      "art-project--type": 1,
-      "art-project--image-path": "/images/content/smmurray-6362.jpg"
+      "art-project--description": "description to be addended",
+      "art-project--type": 2,
+      "art-project--image-path": "/images/content/discmain.jpeg"
     },
     {
       "art-project--title": "The Eye Which We Do Not Have",
-      "art-project--description": "",
+      "art-project--description": "TBD",
       "art-project--type": 2,
       "art-project--image-path": "/images/content/hallwaydoor.jpg"
     },
     {
       "art-project--title": "The Poofs",
-      "art-project--description": "",
+      "art-project--description": "TBD",
       "art-project--type": 1,
       "art-project--image-path": "/images/content/poof.png"
     },
     {
       "art-project--title": "Do You Copy?",
-      "art-project--description": "",
+      "art-project--description": "TBD",
       "art-project--type": 2,
-      "art-project--image-path": "/images/content/eyeball-kbrehm-costume.jpg"
+      "art-project--image-path": "/images/content/puppets1280.jpg"
     },
     {
       "art-project--title": "A Seemingly Unified Spectacle",
-      "art-project--description": "",
-      "art-project--type": 1,
+      "art-project--description": "TBD",
+      "art-project--type": 2,
       "art-project--image-path": "/images/content/slidesp3.jpg"
     },
     {
       "art-project--title": "Puppet theater",
-      "art-project--description": "",
+      "art-project--description": "TBD",
       "art-project--type": 2,
       "art-project--image-path": "/images/content/img0293.jpg"
     }
