--- a/package.json
+++ b/package.json
@@ -11,58 +11,59 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@glidejs/glide": "^3.2.4",
-		"chroma-js": "^2.0.2",
-		"fullpage.js": "^3.0.4",
+		"@glidejs/glide": "^3.3.0",
+		"chroma-js": "^2.0.3",
+		"fullpage.js": "^3.0.5",
 		"granim": "^2.0.0",
-		"gsap": "^2.1.1",
-		"intersection-observer": "^0.5.1",
-		"jquery": "^3.2.1",
+		"gsap": "^2.1.2",
+		"intersection-observer": "^0.7.0",
+		"jquery": "^3.4.1",
 		"jquery-ui": "^1.12.1",
 		"jquery-ui-bundle": "^1.12.1",
-		"lodash": "^4.17.4",
-		"plyr": "^3.4.8",
-		"scrollama": "^1.4.4",
+		"lodash": "^4.17.11",
+		"plyr": "^3.5.4",
+		"scrollama": "^2.0.0",
 		"verge": "^1.10.2",
 		"videojs": "^1.0.0",
-		"videojs-offset": "^2.0.0-beta.2"
+		"videojs-offset": "^2.1.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.2.2",
-		"@babel/preset-env": "^7.2.0",
-		"autoprefixer": "^9.4.2",
-		"babel-loader": "^8.0.4",
+		"@babel/core": "^7.4.4",
+		"@babel/preset-env": "^7.4.4",
+		"autoprefixer": "^9.5.1",
+		"babel-loader": "^8.0.6",
 		"check-dependencies": "^1.1.0",
-		"clean-webpack-plugin": "^1.0.0",
-		"copy-webpack-plugin": "^4.6.0",
-		"css-loader": "^2.0.1",
+		"clean-webpack-plugin": "^2.0.2",
+		"copy-webpack-plugin": "^5.0.3",
+		"css-loader": "^2.1.1",
 		"exports-loader": "^0.7.0",
 		"extract-loader": "^3.1.0",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"file-loader": "^3.0.1",
-		"handlebars": "^4.0.12",
+		"handlebars": "^4.1.2",
 		"handlebars-loader": "^1.7.1",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
 		"image-webpack-loader": "^4.6.0",
-		"jshint": "^2.9.6",
-		"node-sass": "^4.11.0",
+		"jshint": "^2.10.2",
+		"node-sass": "^4.12.0",
+		"npm-check-updates": "^3.1.9",
 		"path": "^0.12.7",
-		"postcss": "^7.0.7",
-		"postcss-cli": "^6.0.1",
+		"postcss": "^7.0.16",
+		"postcss-cli": "^6.1.2",
 		"postcss-flexbugs-fixes": "^4.1.0",
 		"postcss-loader": "^3.0.0",
-		"postcss-modules": "^1.1.0",
+		"postcss-modules": "^1.4.1",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
-		"stylelint": "^9.9.0",
-		"stylelint-declaration-block-no-ignored-properties": "^1.1.0",
-		"stylelint-scss": "^3.4.1",
-		"uglifyjs-webpack-plugin": "^2.0.1",
+		"stylelint": "^10.0.1",
+		"stylelint-declaration-block-no-ignored-properties": "^2.1.0",
+		"stylelint-scss": "^3.6.1",
+		"uglifyjs-webpack-plugin": "^2.1.2",
 		"url-loader": "^1.1.2",
-		"webpack": "^4.27.1",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.10",
+		"webpack": "^4.31.0",
+		"webpack-cli": "^3.3.2",
+		"webpack-dev-server": "^3.3.1",
 		"webpack-module-hot-accept": "^1.0.5",
 		"write-file-webpack-plugin": "^4.5.0"
 	},
